src/objects/Apex_Development_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Set logging and alerts for Apex development</description>
    <fields>
        <fullName>Error_Alert_Recipients__c</fullName>
        <defaultValue>&quot;matthew.evans@salesforce.com&quot;</defaultValue>
        <description>CSV list of recipients who should receive emails triggered by key points / errors in custom code</description>
        <inlineHelpText>CSV list of recipients who should receive emails triggered by key points / errors  in custom code</inlineHelpText>
        <label>Error_Alert_Recipients__c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Log_Errors__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Log any custom code errors in the Apex Error log when set to TRUE</description>
        <inlineHelpText>Log any custom code errors in the Apex Error log when set to TRUE</inlineHelpText>
        <label>Log Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Error_Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Email one or more addresses when a handled error occurs in custom code</description>
        <inlineHelpText>Email one or more addresses when a handled error occurs in custom code</inlineHelpText>
        <label>Send_Error_Alerts</label>
        <type>Checkbox</type>
    </fields>
    <label>Apex Development Settings</label>
</CustomObject>